src/test/ui/const-generics/raw-ptr-const-param.min.stderr
error: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param.rs:6:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^

error: aborting due to previous error

